<resources>
    <string name="app_name" translatable="false">Barintondo</string>
    <string name="headerTitle" translatable="false">Nickname</string>
    <string name="myProfile_label">My Profile</string>
    <string name="myInterests_label">My Interests</string>
    <string name="myCoupon_label">My Coupons</string>
    <string name="app_settings_label">Settings</string>
    <string name="logout_label" translatable="false">Logout</string>
    <string name="home" translatable="false">Home</string>
    <string name="contacts_label">Utility numbers</string>
    <string name="strBari" translatable="false">Bari</string>
    <string-array name="contacts">
        <item>Carabinieri</item>
        <item>Police</item>
        <item>Childhood emergency</item>
        <item>Fire fighters</item>
        <item>Sanitary emergency</item>
    </string-array>
    <string name="navigation_label">Navigate</string>
    <string name="categories_option">Categories</string>
    <string name="sleeping_option">Sleep</string>
    <string name="eating_option">Food</string>
    <string name="attractions_option">Attractions</string>
    <string name="events_option">Events</string>
    <string name="near_option">Near Bari</string>
    <string name="user_label">User</string>
    <string name="preferences_label">Preferences</string>
    <string name="title_send_feedback">Send feedback</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="strInterests">Interests</string>
    <string-array name="attractions">
        <item>Churces</item>
        <item>Monuments</item>
        <item>Teathers</item>
        <item>Beaches</item>
        <item>Discotheques</item>
        <item>Family</item>
    </string-array>
    <string-array name="attractionsTags">
        <item>Chiese</item>
        <item>Monumenti</item>
        <item>Teatri</item>
        <item>Lidi</item>
        <item>Discoteche</item>
        <item>Famiglia</item>
    </string-array>
    <string-array name="eating">
        <item>Pizzerias</item>
        <item>Restaurants</item>
        <item>Cafes</item>
    </string-array>
    <string-array name="eatingTags">
        <item>Pizzerie</item>
        <item>Ristoranti</item>
        <item>Bar</item>
    </string-array>
    <string-array name="sleeping">
        <item>B&amp;B</item>
        <item>Hotels</item>
    </string-array>
    <string-array name="sleepingTags">
        <item>B&amp;B</item>
        <item>Hotel</item>
    </string-array>
    <string-array name="events">
        <item>In Bari</item>
        <item>Outside Bari</item>
    </string-array>
    <string-array name="eventsTags">
        <item>Bari</item>
        <item>Fuori</item>
    </string-array>
    <string-array name="near">
        <item>Churches</item>
        <item>Monuments</item>
        <item>Teathers</item>
        <item>Beaches</item>
        <item>Discotheques</item>
        <item>Family</item>
    </string-array>
    <string-array name="nearTags">
        <item>Chiese</item>
        <item>Monumenti</item>
        <item>Teatri</item>
        <item>Lidi</item>
        <item>Discoteche</item>
        <item>Famiglia</item>
    </string-array>
    <string-array name="contactsNumbers" translatable="false">
        <item>112</item>
        <item>113</item>
        <item>114</item>
        <item>115</item>
        <item>118</item>
    </string-array>
    <string-array name="categories">
        <item>@string/attractions_option</item>
        <item>@string/eating_option</item>
        <item>@string/sleeping_option</item>
        <item>@string/events_option</item>
        <item>@string/near_option</item>
    </string-array>
    <string-array name="categoriesTags">
        <item>Attrazione</item>
        <item>Mangiare</item>
        <item>Dormire</item>
        <item>Evento</item>
        <item>Vicino</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="notifications_new_message" translatable="false">notifications_new_message</string>
    <string name="pref_header_about" translatable="false">About</string>
    <string name="summary_about">Barintodo is an app developed by a group of 4 people named "4Designers". Their name are Graziano Castellano, Davide Di Pierro, Domenico Gigante and Federica Lisco. Contact them on fourdeigners937@gmail.com</string>
    <string name="app_version" translatable="false">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_faq" translatable="false">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq" translatable="false">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy" translatable="false">Privacy Policy</string>
    <string name="url_privacy" translatable="false">http://barintondo.altervista.org/privacyPolicy.html</string>
    <string name="title_terms" translatable="false">Terms &amp; Conditions</string>
    <string name="url_terms" translatable="false">http://barintondo.altervista.org/termsOfService.html</string>
    <string name="title_version">Version</string>
    <string name="pref_header_info" translatable="false">Info</string>
    <string name="key_notifications_new_message_ringtone" translatable="false">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate" translatable="false">key_vibrate</string>
    <string name="key_send_feedback" translatable="false">key_send_feedback</string>
    <string name="myProfile_header">My Profile</string>
    <string name="myUser_label" translatable="false">Username</string>
    <string name="myEmail_label" translatable="false">Email</string>
    <string name="myPass_label" translatable="false">Password</string>
    <string name="saveBtnLabel">Save</string>
    <string name="saveBtnMessage">Changes Saved</string>
    <string name="str_nickname" translatable="false">Nickname</string>
    <string name="str_email" translatable="false">Email</string>
    <string name="str_password" translatable="false">Password</string>
    <string name="str_repeat_password">Repeat Password</string>
    <string name="str_register">Register</string>
    <string name="str_register_toolbar">Registration</string>
    <string name="str_reset" translatable="false">Reset</string>
    <string name="str_login" translatable="false">Login</string>
    <string name="str_don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="str_register_now">New account</string>
    <string name="str_name">Name</string>
    <string name="str_nickname_is_empty">Nickname is empty</string>
    <string name="str_email_is_not_valid">Email is not valid</string>
    <string name="str_weak_password_min_8_characters_required">Weak password (min. 8 characters required)</string>
    <string name="str_passwords_don_t_match">Passwords don\'t match</string>
    <string name="str_i_forgot_my_password">Forgot password? Click here</string>
    <string name="str_reset_password" translatable="false">Reset password</string>
    <string name="OPEN_WEATHER_MAP_API_KEY" translatable="false">1694b85daddaaf9fe6689f06b58c7b29</string>
    <string name="bari_latitude" translatable="false">41.133333</string>
    <string name="bari_longitude" translatable="false">16.85</string>
    <string name="tempUnit" translatable="false">°</string>
    <string name="windUnit" translatable="false">km/h</string>
    <string name="moreBtn">More</string>
    <string name="weatherNotAvailableMsg">Network is not available. Please check your internet connection and try again.</string>
    <string name="webUrl" translatable="false">https://www.ilmeteo.it/meteo/Bari</string>
    <string name="str_meteo">Meteo</string>
    <string name="attractionsToolbarTitle">Attractions</string>
    <string name="searchTitle">Search</string>
    <string name="searchHint">Find an attraction</string>
    <string name="loadingMessage">Loading…</string>
    <string name="closedState">Closed</string>
    <string name="openState">Open</string>
    <string name="notDefined" translatable="false">N/A</string>
    <string name="title_activity_item_detail" translatable="false">ItemDetailActivity</string>
    <string name="strReviews">Reviews</string>
    <string name="strDirections">Directions</string>
    <string name="strTheatre">Theatre</string>
    <string name="strMonument">Monument</string>
    <string name="strMuseum">Museum</string>
    <string name="strChurch">Church</string>
    <string name="strBeach">Beach</string>
    <string name="strDisco">Discotheque</string>
    <string name="strFamiglia">Family</string>
    <string name="strBar" translatable="false">Bar</string>
    <string name="strPizzaHouse" translatable="false">Pizzeria</string>
    <string name="strRestaurant">Restaurant</string>
    <string name="strHotel" translatable="false">Hotel</string>
    <string name="strBB" translatable="false">Bed and Breakfast</string>
    <string name="strNearBari">Near Bari</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="strOpening">Opening:  </string>
    <string name="strClosing">Closing:  </string>
    <string name="str_e_mail_per_il_recupero">Recovery email</string>
    <string name="notConnected">Network not available</string>
    <string name="invalidCredentials">Not valid credentials</string>
    <string name="duplicateAccount">Email already present</string>
    <string name="str_pref_added">Added to interests</string>
    <string name="str_fail_pref_managing">Error in managing interests, try again later</string>
    <string name="str_pref_removed">Removed from interests</string>
    <string name="str_error_not_connected">Not connected,\ncheck your connection then retry</string>
    <string name="strConfirm">Confirm</string>
    <string name="strCancel">Cancel</string>
    <string name="strDisconnect">Are you sure ?</string>
    <string name="strLogout">Logout</string>
    <string name="strYouSelected">You selected</string>
    <string name="strThisFilter">many times. Do you want to put it closer ?</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="strFilter">Filter</string>
    <string name="strYes">Yes</string>
    <string name="strNo">No</string>
    <string name="open_maps">Open Map</string>
    <string name="str_located_in">Located in:</string>
    <string name="strDate">Date: </string>
    <string name="strStartDate">Start Date: </string>
    <string name="strEndDate">End Date: </string>
    <string name="str_from">from </string>
    <string name="str_to">to </string>
    <string name="str_event_take_place">The event will take place </string>
    <string name="strNoReviews">There are no reviews for this place yet</string>
    <string name="strDistanceMeters" type="id">Distance: %dm</string>
    <string name="strDistanceKilometers" type="id">Distance: %.1fKm</string>
    <string name="strNear">Near</string>
    <string name="strNoLuoghiNear">There are no places near</string>
    <string name="strNextEvents">Upcoming events</string>
    <string name="placeholderCommaSeparator" translatable="false">%s, %s</string>
    <string name="strToday">Today</string>
    <string name="devicesPairedDialogMsg">Paired Devices</string>
    <string name="devicesFoundDialogMsg">Found Devices</string>
    <string name="cancelDialogBtn">Cancel</string>
</resources>