<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="Navigazione">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/home_drawer"
                    android:icon="@drawable/ic_home"
                    android:title="@string/home"
                    app:showAsAction="withText" />

                <item
                    android:id="@+id/categorie"
                    android:icon="@drawable/ic_keyboard_arrow_down"
                    android:title="Categorie"
                    app:showAsAction="withText" />

                <item
                    android:id="@+id/dormire"
                    android:icon="@drawable/ic_fiber_smart_record"
                    android:title="Dormire"
                    app:showAsAction="withText"
                    android:visible="false"/>
                <item
                    android:id="@+id/mangiare"
                    android:icon="@drawable/ic_fiber_smart_record"
                    android:title="Mangiare"
                    app:showAsAction="withText"
                    android:visible="false"
                    />
                <item
                    android:id="@+id/attrazioni"
                    android:icon="@drawable/ic_fiber_smart_record"
                    android:title="Attrazioni"
                    app:showAsAction="withText"
                    android:visible="false"/>
                <item
                    android:id="@+id/eventi"
                    android:icon="@drawable/ic_fiber_smart_record"
                    android:title="Eventi"
                    app:showAsAction="withText"
                    android:visible="false"/>
                <item
                    android:id="@+id/intorno"
                    android:icon="@drawable/ic_fiber_smart_record"
                    android:title="Intorno a Bari"
                    app:showAsAction="withText"
                    android:visible="false"/>
            </group>
        </menu>
    </item>
    <item android:title="Utente">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/profile"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/myProfile_label"
                    app:showAsAction="withText" />
                <item
                    android:id="@+id/interests"
                    android:icon="@drawable/ic_star"
                    android:title="@string/myInterests_label"
                    app:showAsAction="withText" />
                <item
                    android:id="@+id/coupon"
                    android:icon="@drawable/ic_coupon"
                    android:title="@string/myCoupon_label"
                    app:showAsAction="withText" />
            </group>
        </menu>
    </item>
    <item android:title="Settaggi">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/app_settings_label"
                    app:showAsAction="withText" />
                <item
                    android:id="@+id/contact"
                    android:icon="@drawable/ic_mail_outline"
                    android:title="@string/contact"
                    app:showAsAction="withText" />
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout_label"
                    app:showAsAction="withText" />
            </group>
        </menu>
    </item>
</menu>