<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/bluetooth_list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/colorWhite"
        style="@style/myToolbar" />

    <TextView
        android:id="@+id/pairedDevices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/devicesPairedDialogMsg"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark" />

    <ListView
        android:id="@+id/pairedDeviceList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/DiscovereDevices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/devicesFoundDialogMsg"
        android:textAlignment="center" />

    <ListView
        android:id="@+id/discoveredDeviceList"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <TextView
        android:id="@+id/messaggioView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelDialogBtn" />


</LinearLayout>
