<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_item_description"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LuogoDescriptionFragment"
    android:padding="15dp">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="@dimen/mediumTextSize"
                android:gravity="right"
                android:text="@string/str_event_take_place"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="@dimen/mediumTextSize"
                android:gravity="right"
                android:text="@string/str_from"
                android:paddingLeft="5dp"/>
            <TextView
                android:id="@+id/text_event_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/mediumTextSize"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="@dimen/mediumTextSize"
                android:text="@string/str_to"
                android:gravity="right"
                android:paddingLeft="5dp"/>
            <TextView
                android:id="@+id/text_event_End"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/mediumTextSize"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/luogo_orari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/strOpening"
                android:textSize="@dimen/mediumTextSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_orario_a"
                android:layout_gravity="right"
                android:textSize="@dimen/mediumTextSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strClosing"
                android:textSize="@dimen/mediumTextSize"
                android:gravity="right"
                android:paddingLeft="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_orario_c"
                android:gravity="left"
                android:textSize="@dimen/mediumTextSize" />

        </LinearLayout>







        <TextView
            android:paddingTop="10dp"
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="Descrizione"
            android:textSize="@dimen/mediumTextSize" />


    </android.support.v7.widget.LinearLayoutCompat>
</ScrollView>