<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/str_e_mail_per_il_recupero"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/textViewEmailError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textViewEmailError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_email_is_not_valid"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_reset_password"
        app:layout_constraintStart_toStartOf="@+id/textViewEmailError"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmailError" />




</android.support.constraint.ConstraintLayout>